--- a/src/style.css
+++ b/src/style.css
@@ -22,6 +22,7 @@ body {
 
 .header h1 {
   width: 70%;
+  margin-left: 20px;
   color: white;
   font-size: 20px;
 }
@@ -120,14 +121,14 @@ newTaskBtnClass:hover {
 .clearAllOpenItems,
 .clearAllDoneItems {
   float: right;
-  padding: 0 70px 0;
+  padding: 0 20px 0;
+  margin-right: 50px;
   cursor: pointer;
+  background: none;
   color: #888;
-}
-
-a.clearAllOpenItems,
-a.clearAllDoneItems {
-  text-decoration: none;
+  border: 1px solid #ddd;
+  border-radius: 6px;
+  outline: none;
 }
 
 ul {
@@ -153,30 +154,40 @@ ul {
   color: #888;
 }
 
-.openTask a {
+.openTask button {
   display: none;
 }
 
-.openTask:hover a {
+.openTask:hover button {
   display: block;
 }
 
 .taskText {
-  width: 75%;
+  flex: 1 0 75%;
   overflow-wrap: break-word;
   word-wrap: break-word;
   hyphens: auto;
 }
 
 .taskDate {
+  display: flex;
+  flex-direction: column;
   font-size: 12px;
 }
 
-a.glyphicon.glyphicon-trash.rmvBtn {
-  text-decoration: none;
+.doneDate {
+  font-weight: bold;
+}
+
+button.glyphicon.glyphicon-trash.rmvBtn {
+  border: none;
+  background-color: rgba(255, 255, 255, 0.664);
+  color: #337ab7;
+  margin-left: 10px;
 }
 
 .checkboxContainer {
+  width: 40px;
   display: block;
   position: relative;
   padding-left: 5px;
